Extraction from 250 frames folder and Renaming of videos from 000000.jpg instead of 000001.png or jpg

--- a/Conversion of Data to 2DMOT2015.ipynb
+++ b/Conversion of Data to 2DMOT2015.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,25 +45,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path='C:/Users/asd/Desktop/500Frames'"
+    "path='C:/Users/asd/Desktop/500Frames'\n",
+    "path2=\"C:/Users/asd/Desktop/sort-tracker/India 2/500 frames\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Code for Making the MOT Format csv files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File Not Found 1 1\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -91,16 +92,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File Not Found 2056 7\n",
-      "File Not Found 1489 4\n",
-      "File Not Found 1489 5\n",
-      "File Not Found 1489 6\n"
+      "File Not Found 2609 5\n",
+      "File Not Found 2609 6\n",
+      "File Not Found 2609 7\n",
+      "File Not Found 1906 5\n",
+      "File Not Found 1906 6\n",
+      "File Not Found 1906 7\n",
+      "File Not Found 2613 5\n",
+      "File Not Found 2613 6\n",
+      "File Not Found 2613 7\n"
      ]
     }
    ],
    "source": [
-    "for i in range(1,17):\n",
-    "    inpath=path+\"/\"+str(i)\n",
+    "for i in range(17,20):\n",
+    "    inpath=path2+\"/\"+str(i)\n",
     "    for j in range(1,8):\n",
     "        try:\n",
     "            fullPath=inpath+\"/\"+str(j)+\"/00\"+str(j)+\".csv\"#j loop represents the name of the video folder and the video we are trying to extract\n",
@@ -128,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,50 +166,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "file not found 1 1\n",
-      "file not found 3 7\n",
-      "Folder not present\n",
-      "file not found 4 4\n",
-      "Folder not present\n",
-      "file not found 4 5\n",
-      "Folder not present\n",
-      "file not found 4 6\n",
-      "Folder not present\n",
-      "file not found 14 5\n",
-      "Folder not present\n",
-      "file not found 14 6\n",
-      "Folder not present\n",
-      "file not found 14 7\n",
-      "Folder not present\n",
-      "file not found 15 3\n",
-      "Folder not present\n",
-      "file not found 15 4\n",
-      "Folder not present\n",
-      "file not found 15 5\n",
-      "Folder not present\n",
-      "file not found 15 6\n",
-      "Folder not present\n",
-      "file not found 15 7\n",
-      "Folder not present\n",
-      "file not found 16 5\n",
-      "Folder not present\n",
-      "file not found 16 6\n",
-      "Folder not present\n",
-      "file not found 16 7\n",
-      "Folder not present\n"
+      "file not found 17 5\n",
+      "file not found 17 6\n",
+      "file not found 17 7\n",
+      "file not found 18 5\n",
+      "file not found 18 6\n",
+      "file not found 18 7\n",
+      "file not found 19 5\n",
+      "file not found 19 6\n",
+      "file not found 19 7\n"
      ]
     }
    ],
    "source": [
     "path2='C:/Users/asd/Desktop/sort-tracker/India 2/500 frames'\n",
-    "for i in range(1,17):\n",
+    "for i in range(17,20):\n",
     "    inpath=path2+\"/\"+str(i)\n",
     "    for j in range(1,8):\n",
     "        try:\n",
@@ -227,22 +211,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "path2='C:/Users/asd/Desktop/sort-tracker/India 2/500 frames'\n",
-    "import csv\n",
-    "with open(\"abc.txt\", \"w\") as my_output_file:\n",
-    "    with open(path2+\"/1/2/002.csv\", \"r\") as my_input_file:\n",
-    "        [ my_output_file.write(\" \".join(row)+'\\n') for row in csv.reader(my_input_file)]\n",
-    "    my_output_file.close()"
+    "#### Single Iteration testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# path2='C:/Users/asd/Desktop/sort-tracker/India 2/500 frames'\n",
+    "# import csv\n",
+    "# with open(\"abc.txt\", \"w\") as my_output_file:\n",
+    "#     with open(path2+\"/1/2/002.csv\", \"r\") as my_input_file:\n",
+    "#         [ my_output_file.write(\" \".join(row)+'\\n') for row in csv.reader(my_input_file)]\n",
+    "#     my_output_file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Single iteration testing of replacing spaces by commas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -257,15 +255,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Making Folders and extracting the videos as png images in the folder"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "path2=\"C:/Users/asd/Desktop/sort-tracker/India 2/500 frames\"\n",
-    "for i in range(1,17):#person\n",
+    "for i in range(14,20):#person number\n",
     "    inpath=path2+\"/\"+str(i)\n",
-    "    for j in range(1,8):#video\n",
+    "    for j in range(1,8):#video number\n",
     "        try:\n",
     "            fullPath=inpath+\"/\"+str(j)+\"/00\"+str(j)+\".mp4\"#j loop represents the name of the video folder and the video we are trying to extract\n",
     "            #print(fullPath)\n",
@@ -281,40 +286,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "path2=\"C:/Users/asd/Desktop/sort-tracker/India 2/500 frames\""
+    "#### Single iteration testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/1/3/003.mp4\n",
-      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/1/3/img1\n",
-      "ffmpeg -i \"C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/1/3/003.mp4\" \"C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/1/3/img1\"/%06d.png\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "path2=\"C:/Users/asd/Desktop/sort-tracker/India 2/500 frames\"\n",
     "fp=path2+\"/1/3/003.mp4\"\n",
     "print(str(fp))\n",
     "fold=path2+\"/1/3/img1\"\n",
@@ -322,6 +306,284 @@
     "command = \"ffmpeg -i \\\"\"+str(fp)+\"\\\" \\\"\"+str(fold)+\"\\\"/%06d.png\"\n",
     "print(command)\n",
     "subprocess.call(command, shell=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing the extra folder made by mistake"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path2=\"C:/Users/asd/Desktop/sort-tracker/India 2/500 frames\"\n",
+    "for i in range(1,17):#person number\n",
+    "    inpath=path2+\"/\"+str(i)\n",
+    "    for j in range(1,8):#video number\n",
+    "        try:\n",
+    "            foldPath=inpath+\"/\"+str(j)+\"/img\"\n",
+    "            print(foldPath)\n",
+    "            if os.path.exists(foldPath):\n",
+    "                os.rmdir(foldPath)\n",
+    "                print(\"folder deleted\")\n",
+    "            \n",
+    "        except:\n",
+    "            print(\"Folder didnt exist\",i,j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/17/1/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/17/2/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/17/3/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/17/4/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/17/5/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/17/6/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/17/7/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/18/1/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/18/2/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/18/3/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/18/4/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/18/5/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/18/6/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/18/7/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/19/1/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/19/2/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/19/3/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/19/4/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/19/5/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/19/6/det\n",
+      "folder made\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/500 frames/19/7/det\n",
+      "folder made\n"
+     ]
+    }
+   ],
+   "source": [
+    "path2=\"C:/Users/asd/Desktop/sort-tracker/India 2/500 frames\"\n",
+    "for i in range(17,20):#person number\n",
+    "    inpath=path2+\"/\"+str(i)\n",
+    "    for j in range(1,8):#video number\n",
+    "        try:\n",
+    "            foldPath2=inpath+\"/\"+str(j)+\"/det\"\n",
+    "            print(foldPath2)\n",
+    "            if not os.path.exists(foldPath2):\n",
+    "                os.makedirs(foldPath2)\n",
+    "                print(\"folder made\")\n",
+    "            \n",
+    "        except:\n",
+    "            print(\"Error Occurred\",i,j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "copy unsuccessful 17 5\n",
+      "copy unsuccessful 17 6\n",
+      "copy unsuccessful 17 7\n",
+      "copy unsuccessful 18 5\n",
+      "copy unsuccessful 18 6\n",
+      "copy unsuccessful 18 7\n",
+      "copy unsuccessful 19 5\n",
+      "copy unsuccessful 19 6\n",
+      "copy unsuccessful 19 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import shutil\n",
+    "path2=\"C:/Users/asd/Desktop/sort-tracker/India 2/500 frames\"\n",
+    "for i in range(17,20):#person number\n",
+    "    inpath=path2+\"/\"+str(i)\n",
+    "    for j in range(1,8):#video number\n",
+    "        try:\n",
+    "            dest=inpath+\"/\"+str(j)+\"/det\"\n",
+    "            source=inpath+\"/\"+str(j)+\"/\"+str(i)+\"-\"+str(j)+\".txt\"\n",
+    "            #print(dest,source)\n",
+    "            shutil.copy(source, dest)\n",
+    "        except:\n",
+    "            print(\"copy unsuccessful\",i,j)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "path2=\"C:/Users/asd/Desktop/sort-tracker/India 2/500 frames\"\n",
+    "dst=path2+\"/1/2/det\"\n",
+    "src=path2+\"/1/2/1-2.txt\"\n",
+    "shutil.copy(src,dst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dest=inpath+\"/\"+str(j)+\"/det\"\n",
+    "            source=inpath+\"/\"+str(j)+\"/\"+str(i)+\"-\"+str(j)+\".txt\"\n",
+    "            copyfile(source, dest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path2=\"C:/Users/asd/Desktop/sort-tracker/India 2/500 frames\"\n",
+    "for i in range(1,20):#person number\n",
+    "    inpath=path2+\"/\"+str(i)\n",
+    "    for j in range(1,8):#video number\n",
+    "        try:\n",
+    "            foldPath=inpath+\"/\"+str(j)+\"/img1\"\n",
+    "            for l, filename in enumerate(os.listdir(foldPath)):\n",
+    "                leng=6\n",
+    "                name=str(l)\n",
+    "                namlen=len(name)\n",
+    "                for k in range(0,leng-namlen):\n",
+    "                    name='0'+name\n",
+    "                os.rename(foldPath + \"/\" + filename, foldPath + \"/\" + name + \".jpg\")\n",
+    "        except:\n",
+    "            print(\"not successful\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foldPath=path2+\"/1/2/img\"\n",
+    "for l, filename in enumerate(os.listdir(foldPath)):\n",
+    "    leng=6\n",
+    "    name=str(l)\n",
+    "    namlen=len(name)\n",
+    "    for k in range(0,leng-namlen):\n",
+    "        name='0'+name\n",
+    "    os.rename(foldPath + \"/\" + filename, foldPath + \"/\" + name + \".jpg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Image Extraction in 250 frames folder\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\\\1', 'C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\\\10', 'C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\\\11', 'C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\\\12', 'C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\\\13', 'C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\\\2', 'C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\\\3', 'C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\\\4', 'C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\\\5', 'C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\\\6', 'C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\\\7', 'C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\\\8', 'C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\\\9']\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\1.mp4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\1\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\10.mp4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\10\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\11.mp4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\11\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\12.mp4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\12\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\13.mp4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\13\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\2.mp4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\2\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\3.mp4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\3\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\4.mp4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\5.mp4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\5\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\6.mp4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\6\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\7.mp4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\7\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\8.mp4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\8\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\9.mp4\n",
+      "C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\\9\n"
+     ]
+    }
+   ],
+   "source": [
+    "path3=\"C:/Users/asd/Desktop/sort-tracker/India 2/250 frames\"\n",
+    "import glob\n",
+    "list2=glob.glob(path3+\"/*.mp4\")\n",
+    "list3=[]\n",
+    "for item in list2:\n",
+    "    list3.append(item.split(\".\")[0])\n",
+    "print(list3)\n",
+    "for i in range(len(list3)):\n",
+    "    os.makedirs(list3[i])\n",
+    "    fullPath=list3[i]+\".mp4\"\n",
+    "    folderPath=list3[i]\n",
+    "    print(fullPath)\n",
+    "    print(folderPath)\n",
+    "    command = \"ffmpeg -i \\\"\"+str(fullPath)+\"\\\" \\\"\"+str(folderPath)+\"\\\"/%06d.jpg\"\n",
+    "    subprocess.call(command, shell=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(list3)):\n",
+    "    folPath=list3[i]\n",
+    "    for l, filename in enumerate(os.listdir(folPath)):\n",
+    "        leng=6\n",
+    "        name=str(l)\n",
+    "        namlen=len(name)\n",
+    "        for k in range(0,leng-namlen):\n",
+    "            name='0'+name\n",
+    "        os.rename(folPath + \"/\" + filename, folPath + \"/\" + name + \".jpg\")"
    ]
   }
  ],
