--- a/indian dataset.ipynb
+++ b/indian dataset.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path='C:/Users/asd/Desktop/500Frames'"
+    "path='C:\\\\Users\\\\asd\\\\Desktop\\\\sort-tracker\\\\India 2\\\\500 frames'"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,16 @@
       "file not found 15 7\n",
       "file not found 16 5\n",
       "file not found 16 6\n",
-      "file not found 16 7\n"
+      "file not found 16 7\n",
+      "file not found 17 5\n",
+      "file not found 17 6\n",
+      "file not found 17 7\n",
+      "file not found 18 5\n",
+      "file not found 18 6\n",
+      "file not found 18 7\n",
+      "file not found 19 5\n",
+      "file not found 19 6\n",
+      "file not found 19 7\n"
      ]
     }
    ],
@@ -356,7 +365,7 @@
     "uniqAnimals=0\n",
     "uniqAutos=0\n",
     "#i represents the outer folders representing different persons' video folders\n",
-    "for i in range(1,17):\n",
+    "for i in range(1,20):\n",
     "    inpath=path+\"/\"+str(i)\n",
     "    for j in range(1,8):\n",
     "        try:\n",
@@ -473,58 +482,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of frames 47809\n",
-      "Total number of distinct ids or total number of distinct objects 2257\n",
-      "Total sequences or videos 80\n",
-      "Total Number of Bounding Boxes 221350\n",
-      "Total Number of pedestrians 18214\n",
-      "occluded pedestrians 2356\n",
-      "number of unique pedestrians 330\n",
-      "Total Number of cars 127093\n",
-      "occluded cars 30226\n",
-      "number of unique Cars 1225\n",
-      "Total Number of buses 6708\n",
-      "occluded buses 1940\n",
-      "number of unique buses 41\n",
-      "Total Number of Trucks 9110\n",
-      "occluded Trucks 1736\n",
-      "number of unique trucks 67\n",
+      "Total number of frames 53797\n",
+      "Total number of distinct ids or total number of distinct objects 2493\n",
+      "Total sequences or videos 83\n",
+      "Total Number of Bounding Boxes 253468\n",
+      "Total Number of pedestrians 20036\n",
+      "occluded pedestrians 2515\n",
+      "number of unique pedestrians 371\n",
+      "Total Number of cars 143051\n",
+      "occluded cars 32944\n",
+      "number of unique Cars 1325\n",
+      "Total Number of buses 7244\n",
+      "occluded buses 2017\n",
+      "number of unique buses 44\n",
+      "Total Number of Trucks 10462\n",
+      "occluded Trucks 2511\n",
+      "number of unique trucks 79\n",
       "Total Number of Animals 131\n",
       "occluded Animals 0\n",
       "number of unique animals 4\n",
-      "Total Number of Cyclists 3918\n",
+      "Total Number of Cyclists 3956\n",
       "occluded Cyclists 743\n",
-      "number of unique cyclists 57\n",
-      "Total Number of two-wheelers 40362\n",
-      "occluded two-wheelers 4981\n",
-      "number of unique two-wheelers 397\n",
-      "Total Number of Auto-Rikshaws 15569\n",
-      "occluded Auto-Rikshaws 2172\n",
-      "number of unique autos 136\n",
-      "totalbbox 221105\n",
-      "Total number of bounding boxes for the 8 class objects 221105\n",
+      "number of unique cyclists 58\n",
+      "Total Number of two-wheelers 50907\n",
+      "occluded two-wheelers 5981\n",
+      "number of unique two-wheelers 467\n",
+      "Total Number of Auto-Rikshaws 17436\n",
+      "occluded Auto-Rikshaws 2699\n",
+      "number of unique autos 146\n",
+      "totalbbox 253223\n",
+      "Total number of bounding boxes for the 8 class objects 253223\n",
       "All the classes of data that are present ['Car', 'Two-Wheeler', 'Pedestrian', 'Auto-Rickshaw', 'Truck', 'Cyclist', 'Bus', 'Animal', 'Pedestrian Crossing', 'No Parking', 'No Stopping', 'Right Turn', 'U-Turn']\n",
-      "average pedestrian width 29.3364444932\n",
-      "average pedestrian Height 79.8383111892\n",
-      "average Car width 93.6322692831\n",
-      "average Car Height 70.7258464274\n",
-      "average Bus width 199.052474657\n",
-      "average Bus Height 149.867173524\n",
-      "average Auto width 34.3203802428\n",
-      "average Auto Height 93.4019525981\n",
-      "average Cyclist width 136.37927514\n",
-      "average Cyclist Height 371.15237366\n",
-      "average Two Wheeler width 51.4643724295\n",
-      "average Two Wheeler Height 82.5069372182\n",
-      "average Truck width 136.609110867\n",
-      "average Truck Height 122.060263447\n",
+      "average pedestrian width 28.7980135756\n",
+      "average pedestrian Height 77.5950788581\n",
+      "average Car width 90.54169492\n",
+      "average Car Height 68.7031338474\n",
+      "average Bus width 200.093318609\n",
+      "average Bus Height 153.474737714\n",
+      "average Auto width 33.0922803395\n",
+      "average Auto Height 89.1658063776\n",
+      "average Cyclist width 145.85364004\n",
+      "average Cyclist Height 392.996713852\n",
+      "average Two Wheeler width 49.0557880056\n",
+      "average Two Wheeler Height 78.7074272693\n",
+      "average Truck width 132.55400497\n",
+      "average Truck Height 118.213630281\n",
       "average Animal width 40.1450381679\n",
       "average Animal Height 42.7099236641\n",
       "Number of road sign boxes 245\n",
