PDF for dataset of 500 frames updated

--- a/indian dataset.ipynb
+++ b/indian dataset.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -493,33 +493,35 @@
       "Total number of distinct ids or total number of distinct objects 2493\n",
       "Total sequences or videos 83\n",
       "Total Number of Bounding Boxes 253468\n",
-      "Total Number of pedestrians 20036\n",
-      "occluded pedestrians 2515\n",
+      "Total Number of pedestrian bounding boxes 20036\n",
+      "occluded pedestrian bounding boxes 2515\n",
       "number of unique pedestrians 371\n",
-      "Total Number of cars 143051\n",
+      "Total Number of car bounding boxes 143051\n",
       "occluded cars 32944\n",
       "number of unique Cars 1325\n",
-      "Total Number of buses 7244\n",
+      "Total Number of bus bounding boxes 7244\n",
       "occluded buses 2017\n",
       "number of unique buses 44\n",
-      "Total Number of Trucks 10462\n",
+      "Total Number of Truck bounding boxes 10462\n",
       "occluded Trucks 2511\n",
       "number of unique trucks 79\n",
-      "Total Number of Animals 131\n",
-      "occluded Animals 0\n",
-      "number of unique animals 4\n",
-      "Total Number of Cyclists 3956\n",
+      "Total Number of Cyclist bounding boxes 3956\n",
       "occluded Cyclists 743\n",
       "number of unique cyclists 58\n",
-      "Total Number of two-wheelers 50907\n",
+      "Total Number of two-wheeler bounding boxes 50907\n",
       "occluded two-wheelers 5981\n",
       "number of unique two-wheelers 467\n",
-      "Total Number of Auto-Rikshaws 17436\n",
+      "Total Number of Auto-Rikshaw bounding boxes 17436\n",
       "occluded Auto-Rikshaws 2699\n",
       "number of unique autos 146\n",
+      "Total Number of Animal bounding boxes 131\n",
+      "occluded Animals 0\n",
+      "number of unique animals 4\n",
       "totalbbox 253223\n",
       "Total number of bounding boxes for the 8 class objects 253223\n",
-      "All the classes of data that are present ['Car', 'Two-Wheeler', 'Pedestrian', 'Auto-Rickshaw', 'Truck', 'Cyclist', 'Bus', 'Animal', 'Pedestrian Crossing', 'No Parking', 'No Stopping', 'Right Turn', 'U-Turn']\n",
+      "All the classes of data that are present ['Car', 'Two-Wheeler', 'Pedestrian']\n",
+      "['Auto-Rickshaw', 'Truck', 'Cyclist', 'Bus', 'Animal']\n",
+      "['Pedestrian Crossing', 'No Parking', 'No Stopping', 'Right Turn', 'U-Turn']\n",
       "average pedestrian width 28.7980135756\n",
       "average pedestrian Height 77.5950788581\n",
       "average Car width 90.54169492\n",
@@ -555,33 +557,35 @@
     "print(\"Total number of distinct ids or total number of distinct objects\",totalID)\n",
     "print(\"Total sequences or videos\",videoNo)\n",
     "print(\"Total Number of Bounding Boxes\", totalbbox)\n",
-    "print(\"Total Number of pedestrians\", totalPeds )\n",
-    "print(\"occluded pedestrians\",occPeds)\n",
+    "print(\"Total Number of pedestrian bounding boxes\", totalPeds )\n",
+    "print(\"occluded pedestrian bounding boxes\",occPeds)\n",
     "print(\"number of unique pedestrians\",uniqPeds)\n",
-    "print(\"Total Number of cars\", totalCar )\n",
+    "print(\"Total Number of car bounding boxes\", totalCar )\n",
     "print(\"occluded cars\",occCar)\n",
     "print(\"number of unique Cars\",uniqCars)\n",
-    "print(\"Total Number of buses\", totalBus )\n",
+    "print(\"Total Number of bus bounding boxes\", totalBus )\n",
     "print(\"occluded buses\",occBus)\n",
     "print(\"number of unique buses\",uniqBuses)\n",
-    "print(\"Total Number of Trucks\", totalTruck )\n",
+    "print(\"Total Number of Truck bounding boxes\", totalTruck )\n",
     "print(\"occluded Trucks\",occTruck)\n",
     "print(\"number of unique trucks\",uniqTrucks)\n",
-    "print(\"Total Number of Animals\", totalAnimal )\n",
-    "print(\"occluded Animals\",occAnimal)\n",
-    "print(\"number of unique animals\",uniqAnimals)\n",
-    "print(\"Total Number of Cyclists\", totalCyclist )\n",
+    "print(\"Total Number of Cyclist bounding boxes\", totalCyclist )\n",
     "print(\"occluded Cyclists\",occCyclist)\n",
     "print(\"number of unique cyclists\",uniqCyclists)\n",
-    "print(\"Total Number of two-wheelers\", totalTwo )\n",
+    "print(\"Total Number of two-wheeler bounding boxes\", totalTwo )\n",
     "print(\"occluded two-wheelers\",occTwo)\n",
     "print(\"number of unique two-wheelers\",uniqTwos)\n",
-    "print(\"Total Number of Auto-Rikshaws\", totalAuto )\n",
+    "print(\"Total Number of Auto-Rikshaw bounding boxes\", totalAuto )\n",
     "print(\"occluded Auto-Rikshaws\",occAuto)\n",
     "print(\"number of unique autos\",uniqAutos)\n",
+    "print(\"Total Number of Animal bounding boxes\", totalAnimal )\n",
+    "print(\"occluded Animals\",occAnimal)\n",
+    "print(\"number of unique animals\",uniqAnimals)\n",
     "print(\"totalbbox\", totalPeds+totalCar+totalBus+totalTruck+totalCyclist+totalTwo+totalAuto+totalAnimal)\n",
     "print(\"Total number of bounding boxes for the 8 class objects\", totalbbox-irrcount)\n",
-    "print(\"All the classes of data that are present\",allClasses)\n",
+    "print(\"All the classes of data that are present\",allClasses[0:3])\n",
+    "print(allClasses[3:8])\n",
+    "print(allClasses[8:])\n",
     "avgPedWidth=avg(pedWidth,totalPeds)\n",
     "avgPedHeight=avg(pedHeight,totalPeds)\n",
     "avgCarWidth=avg(carWidth,totalCar)\n",
